fix mobile view spacing issues

--- a/src/assets/css/index.pcss
+++ b/src/assets/css/index.pcss
@@ -53,7 +53,7 @@ summary::-webkit-details-marker {
   @apply mx-auto;
 }
 details > div {
-  @apply py-6 px-6 bg-gray-100 mb-8 text-sm text-gray-700;
+  @apply py-6 mb-8 text-sm text-gray-700;
 }
 details > div p:last-of-type {
   @apply mb-0;
@@ -69,7 +69,7 @@ summary {
     flex: 1 0 calc(33% - theme("margin.8"));
   }
   details > div {
-    @apply text-base;
+    @apply px-6 bg-gray-100 text-base;
   }
   summary {
     @apply text-lg;
